[gd_scene load_steps=9 format=3 uid="uid://cfnhl2q18c0hb"]

[ext_resource type="Script" path="res://main.gd" id="1_jwaqc"]
[ext_resource type="Texture2D" uid="uid://gfifnat1f2ey" path="res://START (48 x 8).png" id="3_ly36b"]
[ext_resource type="PackedScene" uid="uid://df60n0s0i8gj7" path="res://ui.tscn" id="4_2cqxo"]
[ext_resource type="Script" path="res://frame_rate_controller.gd" id="5_hl4ms"]
[ext_resource type="Script" path="res://enemy_controller.gd" id="6_ub8a8"]
[ext_resource type="PackedScene" uid="uid://droddjnofk4dd" path="res://player.tscn" id="7_8m5b6"]
[ext_resource type="Script" path="res://powerup_controller.gd" id="7_rqjaf"]
[ext_resource type="Script" path="res://wall_controller.gd" id="8_hnwmv"]

[node name="Main" type="Node2D"]
process_mode = 3
script = ExtResource("1_jwaqc")

[node name="Background" type="Sprite2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="TextureButton" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
texture_normal = ExtResource("3_ly36b")

[node name="GameOver" type="TextureRect" parent="CanvasLayer/CenterContainer"]
layout_mode = 2

[node name="UI" parent="CanvasLayer" instance=ExtResource("4_2cqxo")]

[node name="FrameRateController" type="Node" parent="."]
script = ExtResource("5_hl4ms")

[node name="EnemyController" type="Node" parent="."]
script = ExtResource("6_ub8a8")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Player" parent="." instance=ExtResource("7_8m5b6")]

[node name="PowerupController" type="Node" parent="."]
script = ExtResource("7_rqjaf")

[node name="WallController" type="Node" parent="."]
script = ExtResource("8_hnwmv")

[connection signal="enemyDied" from="." to="." method="decEnemies"]
[connection signal="gameEnded" from="." to="PowerupController" method="cleanupEntities"]
[connection signal="gameEnded" from="." to="WallController" method="cleanupEntities"]
[connection signal="gameStarted" from="." to="PowerupController" method="beginSpawningEntities"]
[connection signal="gameStarted" from="." to="WallController" method="spawnEntities"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/Start" to="." method="startGame"]
[connection signal="ateEnemy" from="Player" to="." method="_on_player_ate_enemy"]
[connection signal="died" from="Player" to="." method="endGame"]
